@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -U flake8 ruff pytest pytest-doctestplus pytest-pylint pytest-mypy
         pip install -U types-pkg_resources
+        pip install .
     - name: Lint with flake8
       run: |
         flake8 .
