@@ -3,6 +3,7 @@ ChangeLog
 0.2.0dev
     * Improve automatic thumbnail and preview selection
     * `sl1s` added as sla extension gcode type
+    * Add cache file versioning, distrust cache files with a different version
 
 0.1.0
     * Initial release
